[gd_scene load_steps=7 format=3 uid="uid://b0pubs43dvkoy"]

[ext_resource type="Script" uid="uid://b567hw6hc8kfv" path="res://Scripts/Main.gd" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://321vod0dgilt" path="res://Scripts/GameManager.gd" id="2_tbgi4"]
[ext_resource type="Script" path="res://Scripts/GachaSystem.gd" id="3_tefeu"]
[ext_resource type="Script" uid="uid://bw4laowun5n0p" path="res://Scripts/BattleSystem.gd" id="4_o6xl0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85g3d"]
bg_color = Color(0.241729, 0.633897, 0.897724, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(0.720838, 0.631248, 0.0449258, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jyhfs")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_tbgi4")

[node name="GachaSystem" type="Node" parent="."]
script = ExtResource("3_tefeu")

[node name="BattleSystem" type="Node" parent="."]
script = ExtResource("4_o6xl0")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 400.0

[node name="TitleLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Epic Gacha RPG"

[node name="PlayerInfo" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Level 1 | Power: 0"

[node name="CurrencyLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Gold: 2000"

[node name="ChapterButton" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_85g3d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tipki")
text = "Adventure"

[node name="TeamButton" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Team"

[node name="GachaButton" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Summon"

[node name="InventoryButton" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Inventory"
